--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "multer": "^2.0.0",
         "next-themes": "^0.4.6",
         "pdf-parse": "^1.1.1",
+        "puppeteer": "^24.23.0",
         "react": "^18.3.1",
         "react-day-picker": "^8.10.1",
         "react-dom": "^18.3.1",
