--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "devDependencies": {
         "@types/node": "^20.10.0",
         "@vitejs/plugin-react-swc": "^3.10.2",
+        "ngrok": "^5.0.0-beta.2",
         "vite": "6.3.5"
     },
     "scripts": {
